[workspace]
members = ["chainlink-prices", "erc1155", "erc721", "erc20", "ethereum-network"]

[workspace.dependencies]
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-ethereum = "0.9.6"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.3.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
