[package]
name = "chainlink-price-substream"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
prost = { workspace = true }
prost-types = { workspace = true }
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
phf = { version = "0.11.1", features = ["macros"] }
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-entity-change = { workspace = true }
tiny-keccak = "2.0"
lazy_static = "1.4.0"

[build-dependencies]
prost-build = "0.11"
anyhow = "1"
substreams-ethereum = "0.9"