[package]
name = "erc721-substream"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-entity-change = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
base64 = "0.13.0"
ethabi = "18.0.0"

[build-dependencies]
anyhow = "1.0.72"
substreams-ethereum = "0.9"
