[package]
name = "network_substream"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-entity-change = { workspace = true }
prost = { workspace = true }
base64 = "0.13.0"
prost-types = { workspace = true }
thiserror = "1.0.37"
hex = "0.4"





